// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rect hotspot choice > rendering > renders rect elements with given coords 1`] = `
<body>
  <div>
    <g
      class="shape"
      role="button"
      tabindex="-1"
    >
      <rect
        class="shape-outer-border"
        height="192"
        width="92"
        x="104"
        y="104"
      />
      <rect
        class="shape-inner-border"
        height="180"
        width="80"
        x="110"
        y="110"
      />
      <rect
        class="shape-dashed-outline"
        height="192"
        width="92"
        x="104"
        y="104"
      />
      <circle
        class="shape-checkmark"
        cx="150"
        cy="200"
        r="10"
      />
    </g>
    
    
  </div>
</body>
`;

exports[`rect hotspot choice > rendering > renders text label as a checkmark if label is set 1`] = `
<body>
  <div>
    <g
      class="shape selected"
      role="button"
      tabindex="-1"
    >
      <rect
        class="shape-outer-border"
        height="192"
        width="92"
        x="104"
        y="104"
      />
      <rect
        class="shape-inner-border"
        height="180"
        width="80"
        x="110"
        y="110"
      />
      <rect
        class="shape-dashed-outline"
        height="192"
        width="92"
        x="104"
        y="104"
      />
      <text
        class="shape-checkmark"
        x="148.5"
        y="198.5"
      >
        <tspan
          dy="0"
          x="148.5"
        >
          1
        </tspan>
      </text>
    </g>
    
    
  </div>
</body>
`;

exports[`rect hotspot choice > rendering > renders with no props 1`] = `
<body>
  <div>
    <g
      class="shape"
      role="button"
      tabindex="-1"
    />
    
    
  </div>
</body>
`;
